--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       left: 0;
       width: 240px;
       height: 100vh;
-      background-color: #a0d9d9;
+      background-color: #c0eaea;
       padding: 20px;
       box-shadow: 2px 0 5px rgba(0, 0, 0, 0.1);
       overflow-y: auto;
