--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
     </a>
     <a class="orcid-link" href="https://www.scholarmate.com/P/v1hhv7" target="_blank">
       <img src="https://www.scholarmate.com/favicon.ico" alt="ScholarMate icon" style="width: 16px; height: 16px;" />
-      ScholarMate
+      科研之友 ScholarMate
     </a>
   </div>
 
