--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@
     </div>
 
 <div class="column">
-  <h3>Research Highlights</h3>
+  <h3>Neuroimaging gallery</h3>
   <div class="publications">
     <div class="publication-item">
       <div>
