--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
     <div class="column">
       <h3>About me</h3>
       <p>
-        I am a freelance Chinese to French translator and I teach translation at Tamkang University (Taiwan). I am also a PhD student in Translation and Interpretation at National Taiwan Normal University. My areas of interest are translation studies, crosslinguistic influence, and neurolinguistics.
+        I am a freelance Chinese to French translator and I teach translation at Tamkang University (Taiwan). I hold a PhD in Translation and Interpretation from National Taiwan Normal University. My areas of interest are translation studies, crosslinguistic influence, and neurolinguistics.
       </p>
     </div>
 
