--- a/index.html
+++ b/index.html
@@ -181,6 +181,10 @@
   <div class="main-content">
     <img src="brainwaves-pic.jpg" alt="Brainwaves banner" class="banner-img" />
 
+      <p>
+       ↑ my brainwaves
+      </p>
+    
     <div class="column">
       <h3>About me</h3>
       <p>
