--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
     <img src="brainwaves-pic.jpg" alt="Brainwaves banner" class="banner-img" />
 
       <p>
-       ↑ my brainwaves
+                                                                                                                                            ⬆️ my brainwaves
       </p>
     
     <div class="column">
