--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
   <div class="main-content">
     <img src="brainwaves-pic.jpg" alt="Brainwaves banner" class="banner-img" />
 
-   <p class="right-align">⬆️ my brainwaves</p>
+    <p class="right-align-text">⬆️ my brainwaves</p>
     
     <div class="column">
       <h3>About me</h3>
