--- a/index.html
+++ b/index.html
@@ -138,6 +138,12 @@
       display: block;
     }
 
+    .right-align-text {
+      width: 100%;
+      text-align: right;
+      margin-top: 8px;
+    }
+
     @media (max-width: 768px) {
       .sidebar {
         position: relative;
