--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
     <div class="column">
       <h3>About me</h3>
       <p>
-        I am a freelance Chinese-to-French translator and I teach translation at Tamkang University (Taiwan). I hold a PhD in Translation and Interpretation from National Taiwan Normal University. My areas of interest are translation studies, crosslinguistic influence, and neurolinguistics.
+        I am a freelance Chinese-to-French translator and I teach translation at Tamkang University (Taiwan). I hold a PhD in Translation and Interpretation from National Taiwan Normal University. My areas of expertise are translation studies and neurolinguistics. I am particulary interested in linguistic relativity, crosslinguistic influence, and prototype theory.
       </p>
     </div>
 
