--- a/index.html
+++ b/index.html
@@ -233,6 +233,15 @@
   <div class="publications">
     <div class="publication-item">
       <div>
+
+        <!-- New section added on top -->
+        <p style="margin-top: 0; font-weight: bold;">My brainwaves</p>
+        <div style="position: relative; padding-bottom: 56.25%; height: 0; overflow: hidden; max-width: 100%; margin-top: 10px; margin-bottom: 25px;">
+          <iframe src="https://www.youtube.com/embed/dq4-W5iUycQ" frameborder="0" allowfullscreen 
+                  style="position: absolute; top: 0; left: 0; width: 100%; height: 100%;">
+          </iframe>
+        </div>
+
         <p>
           Below is a scalp map video showing the Atypical minus Typical translation equivalents difference in congruent trials (e.g., <em>kāi diànnăo</em> 開電腦 “turn on the computer” followed by <em>turn on</em> minus <em>kāi chuānghù</em> 開窗戶 “open the window” followed by <em>open</em>) averaged across 24 Chinese-English bilingual participants and over 1200 milliseconds. Compared to Typical translation equivalents, we can see that Atypical translation equivalents elicit a posterior N400 (from 300 to 500 ms), indicating retrieval difficulty, followed by a frontal-Post N400 Positivity (f-PNP) (from 600 to 900 ms), reflecting the effort to inhibit typical translations and integrate atypical ones.
         </p>
@@ -249,7 +258,7 @@
                   style="position: absolute; top: 0; left: 0; width: 100%; height: 100%;">
           </iframe>
         </div>
-        </p>
+
       </div>
     </div>
   </div>
