--- a/index.html
+++ b/index.html
@@ -232,7 +232,6 @@
   <h3>Neuroimaging gallery</h3>
   <div class="publications">
 
-    <!-- My brainwaves block (separate white frame) -->
     <div class="publication-item">
       <div>
         <p>My brainwaves</p>
@@ -244,7 +243,6 @@
       </div>
     </div>
 
-    <!-- Existing scalp map block -->
     <div class="publication-item">
       <div>
         <p>
@@ -265,6 +263,10 @@
         </div>
       </div>
     </div>
+
+  </div>
+</div>
+
 
   </div>
 </div>
