--- a/index.html
+++ b/index.html
@@ -232,17 +232,19 @@
   <h3>Neuroimaging gallery</h3>
   <div class="publications">
 
+    <!-- My brainwaves block -->
     <div class="publication-item">
       <div>
         <p>My brainwaves</p>
-        <div style="position: relative; padding-bottom: 56.25%; height: 0; overflow: hidden; max-width: 100%; margin-top: 10px;">
+        <div style="width: 100%; max-width: 1000px; height: 562px; margin: 10px auto; position: relative;">
           <iframe src="https://www.youtube.com/embed/dq4-W5iUycQ" frameborder="0" allowfullscreen
-                  style="position: absolute; top: 0; left: 0; width: 100%; height: 100%;">
+                  style="width: 100%; height: 100%; position: absolute; top: 0; left: 0;">
           </iframe>
         </div>
       </div>
     </div>
 
+    <!-- Scalp map block -->
     <div class="publication-item">
       <div>
         <p>
@@ -255,18 +257,14 @@
             ‘Don’t forget to close the light!’: ERP evidence for the facilitation of typical translation equivalents in bilingual processing
           </a>
         </p>
-        
-        <div style="position: relative; padding-bottom: 56.25%; height: 0; overflow: hidden; max-width: 100%; margin-top: 10px;">
+
+        <div style="width: 100%; max-width: 1000px; height: 562px; margin: 10px auto; position: relative;">
           <iframe src="https://www.youtube.com/embed/Jedt0tAC3gk" frameborder="0" allowfullscreen
-                  style="position: absolute; top: 0; left: 0; width: 100%; height: 100%;">
+                  style="width: 100%; height: 100%; position: absolute; top: 0; left: 0;">
           </iframe>
         </div>
       </div>
     </div>
-
-  </div>
-</div>
-
 
   </div>
 </div>
