--- a/index.html
+++ b/index.html
@@ -232,11 +232,10 @@
   <h3>Neuroimaging gallery</h3>
   <div class="publications">
 
-    <!-- My brainwaves block -->
-    <div class="publication-item" style="text-align: center;">
+    <div class="publication-item" style="text-align: left;">
       <div>
         <p>My brainwaves</p>
-        <div style="width: 1000px; height: 562px; margin: 10px auto; position: relative;">
+        <div style="width: 1000px; height: 562px; margin-top: 10px; position: relative;">
           <iframe src="https://www.youtube.com/embed/dq4-W5iUycQ" frameborder="0" allowfullscreen
                   style="width: 1000px; height: 562px; position: absolute; top: 0; left: 0;">
           </iframe>
@@ -244,8 +243,7 @@
       </div>
     </div>
 
-    <!-- Scalp map block -->
-    <div class="publication-item" style="text-align: center;">
+    <div class="publication-item" style="text-align: left;">
       <div>
         <p>
           Below is a scalp map video showing the Atypical minus Typical translation equivalents difference in congruent trials (e.g., <em>kāi diànnăo</em> 開電腦 “turn on the computer” followed by <em>turn on</em> minus <em>kāi chuānghù</em> 開窗戶 “open the window” followed by <em>open</em>) averaged across 24 Chinese-English bilingual participants and over 1200 milliseconds. Compared to Typical translation equivalents, we can see that Atypical translation equivalents elicit a posterior N400 (from 300 to 500 ms), indicating retrieval difficulty, followed by a frontal-Post N400 Positivity (f-PNP) (from 600 to 900 ms), reflecting the effort to inhibit typical translations and integrate atypical ones.
@@ -258,7 +256,7 @@
           </a>
         </p>
 
-        <div style="width: 1000px; height: 562px; margin: 10px auto; position: relative;">
+        <div style="width: 1000px; height: 562px; margin-top: 10px; position: relative;">
           <iframe src="https://www.youtube.com/embed/Jedt0tAC3gk" frameborder="0" allowfullscreen
                   style="width: 1000px; height: 562px; position: absolute; top: 0; left: 0;">
           </iframe>
@@ -268,6 +266,7 @@
 
   </div>
 </div>
+
 
   </div>
 
