--- a/index.html
+++ b/index.html
@@ -234,7 +234,7 @@
 
     <div class="publication-item" style="text-align: left;">
       <div>
-        <p>My brainwaves</p>
+        <p>EEG artifacts</p>
         <div style="width: 1000px; height: 562px; margin-top: 10px; position: relative;">
           <iframe src="https://www.youtube.com/embed/dq4-W5iUycQ" frameborder="0" allowfullscreen
                   style="width: 1000px; height: 562px; position: absolute; top: 0; left: 0;">
