--- a/index.html
+++ b/index.html
@@ -236,7 +236,7 @@
       <div>
         <p>EEG artifacts</p>
         <div style="width: 1000px; height: 562px; margin-top: 10px; position: relative;">
-          <iframe src="https://www.youtube.com/embed/dq4-W5iUycQ" frameborder="0" allowfullscreen
+          <iframe src="https://youtube.com/VBwL-yDqPn4" frameborder="0" allowfullscreen
                   style="width: 1000px; height: 562px; position: absolute; top: 0; left: 0;">
           </iframe>
         </div>
