--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
       Google Scholar
     </a>
     <a class="orcid-link" href="https://www.scholarmate.com/P/v1hhv7" target="_blank">
-      <img src="https://www.scholarmate.com/favicon.ico" alt="ScholarMate icon" style="width: 16px; height: 16px;" />
+      <img src="https://www.scholarmate.com/favicon.ico" style="width: 16px; height: 16px;" />
       科研之友 ScholarMate
     </a>
   </div>
